# gnoman-cli

./: CHANGELOG.md  Dockerfile  README.md  delay.sol  gnoman.py  gnoman_audit.jsonl  pyproject.toml  requirements.txt
docs/: IMPLEMENTATION_STATUS.md
gnoman/: __init__.py  __main__.py  abi.py  app.py  audit.py  autopilot.py  cli.py  commands.py  core.py  graph.py  guard.py  legacy.py  logbook.py  plugin.py  rescue.py  safe.py  secrets.py  sync.py  tui.py  tx.py  wallet.py
gnoman/commands/: __init__.py  audit.py  keyring.py  recover.py  safe.py  secrets.py  wallet.py
gnoman/core/: __init__.py  abi_manager.py  audit_manager.py  contract_manager.py  safe_manager.py  sync_manager.py  wallet_manager.py
gnoman/security/: __init__.py  encrypted_store.py
gnoman/services/: __init__.py  state.py
gnoman/ui/: __init__.py  dashboard.py  main.py  simple_gui.py  terminal.py
gnoman/ui/views/: __init__.py  abi_view.py  audit_view.py  secrets_view.py  sync_view.py  wallets_view.py
gnoman/utils/: __init__.py  abi.py  crypto_tools.py  keyring_backend.py  keyring_compat.py  logbook.py  paths.py
gnoman/wallet/: manager.py  seed.py
gnoman/wallet_core/: seed.py
gnoman_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_audit_manager.py  test_core_initialisation.py  test_encrypted_store.py  test_keyring_backend.py  test_keyring_compat.py  test_logbook.py  test_safe_manager.py  test_sync_manager.py  test_tui_menu.py  test_ui.py  test_wallet.py  test_wallet_manager.py
