[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gnoman-cli"
version = "1.0.0"
description = "GNOMAN universal keyring manager"
readme = "README.md"
authors = [
  { name = "Christopher Hirschauer", email = "c.hirschauer@gmail.com" }
]
license = { file = "LICENSE.md" }
requires-python = ">=3.9"
dependencies = [
  "keyring>=24.0.0",
  "cryptography>=42.0.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/74Thirsty/gnoman-cli"
Source = "https://github.com/74Thirsty/gnoman-cli"
Issues = "https://github.com/74Thirsty/gnoman-cli/issues"

[project.scripts]
gnoman = "gnoman.cli:main"

[tool.setuptools.packages.find]
include = ["gnoman", "gnoman.*"]

# No package data is required for the simplified keyring manager build
[tool.setuptools.package-data]
gnoman = []

