[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gnoman-cli"
version = "2.0.0"
description = "GNOMAN mission-control console"
readme = "README.md"
authors = [
  { name = "Christopher Hirschauer", email = "c.hirschauer@gmail.com" }
]
license = { file = "LICENSE.md" }
requires-python = ">=3.11"
dependencies = [
  "keyring>=24.0.0",
  "secretstorage>=3.3.3",
  "web3>=6.0.0",
  "bip_utils>=2.7.0",
  "click>=8.1.0",
  "rich>=13.0.0",
  "safe-eth-py>=5.0.0",
  "eth_abi>=4.0.0",
  "cryptography>=42.0.0",
  "pdfkit>=1.0.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/74Thirsty/gnoman-cli"
Source = "https://github.com/74Thirsty/gnoman-cli"
Issues = "https://github.com/74Thirsty/gnoman-cli/issues"

[project.scripts]
gnoman = "gnoman.cli:main"

[tool.setuptools.packages.find]
include = ["gnoman", "gnoman.*"]
