[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gnoman-cli"
version = "1.1.0"
description = "GNOMAN mission-control console"
readme = "README.md"
authors = [
  { name = "Christopher Hirschauer", email = "c.hirschauer@gmail.com" }
]
license = { file = "LICENSE.md" }
requires-python = ">=3.11"
dependencies = [
  "textual>=0.62.0,<0.63.0",
  "keyring>=24.0.0",
  "secretstorage>=3.3.3; platform_system == 'Linux'",
  "cryptography>=42.0.0",
  "web3>=6.0.0",
  "bip_utils>=2.7.0",
  "safe-eth-py>=5.0.0",
  "eth_abi>=4.2.1",
  "pdfkit>=1.0.0",
  "rich>=13.0.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/74Thirsty/gnoman-cli"
Source = "https://github.com/74Thirsty/gnoman-cli"
Issues = "https://github.com/74Thirsty/gnoman-cli/issues"

[project.scripts]
gnoman = "gnoman.app:main"
gnomanctl = "gnoman.cli:main"

[tool.setuptools.packages.find]
include = ["gnoman", "gnoman.*"]
